--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 40% 60%;
   align-items: center; 
   gap: 10px;
   padding: 10px;
   margin: 15px;
 }
 
-/* .grid-container > div {
-  text-align: left;
-} */
 .content{
   margin-left: 45px ;
 }
 .title {
+  /* margin-top: 10px; */
   font-family: "Poppins", sans-serif;
   font-size: 46px;
   font-style: bold;
@@ -63,9 +61,9 @@
  }
 
  img{
-  max-width: 100%;
-  height: auto;
+  width: 762px;
+  height: 545px;
   border-radius: 5px;
   box-shadow: 4px 4px 5px #D3D3D3;
-
+  margin-right: 45px;
  }
